--- a/MDK-ARM/usb_final/usb_final.build_log.htm
+++ b/MDK-ARM/usb_final/usb_final.build_log.htm
@@ -26,21 +26,10 @@ Project File Date:  07/04/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
+*** Warning: You are compiling one or more files of source type C++ and have selected 'use MicroLIB'. MicroLIB does not support C++!
+  
 Build target 'usb_final'
-compiling usb_host.c...
-../Src/usb_host.c(88): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "const TCHAR *"
-  		switch(f_stat(name,&fno)){
-../Src/usb_host.c(91): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "const TCHAR *"
-  				l_result = f_open(&MyFile,name,FA_CREATE_NEW|FA_WRITE);
-../Src/usb_host.c(94): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "const TCHAR *"
-  				l_result = f_open(&MyFile,name,FA_OPEN_APPEND|FA_WRITE);
-../Src/usb_host.c(75): warning:  #177-D: variable "bytesread"  was declared but never referenced
-  	UINT bytesread;
-../Src/usb_host.c: 4 warnings, 0 errors
-linking...
-Program Size: Code=24212 RO-data=708 RW-data=108 ZI-data=19508  
-FromELF: creating hex file...
-"usb_final\usb_final.axf" - 0 Error(s), 4 Warning(s).
+"usb_final\usb_final.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -63,7 +52,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
