--- a/MDK-ARM/usb_final/usb_final.build_log.htm
+++ b/MDK-ARM/usb_final/usb_final.build_log.htm
@@ -27,22 +27,26 @@ Project File Date:  07/04/2020
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'usb_final'
-compiling usb_host.c...
-../Src/usb_host.c(89): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "const TCHAR *"
-  		switch(f_stat(name,&fno)){
-../Src/usb_host.c(92): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "const TCHAR *"
-  				l_result = f_open(&MyFile,name,FA_CREATE_NEW|FA_WRITE);
-../Src/usb_host.c(95): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "const TCHAR *"
-  				l_result = f_open(&MyFile,name,FA_OPEN_APPEND|FA_WRITE);
-../Src/usb_host.c(76): warning:  #177-D: variable "bytesread"  was declared but never referenced
-  	UINT bytesread;
-../Src/usb_host.c(68): warning:  #177-D: variable "uart_length"  was declared but never referenced
-  static int32_t uart_length=0;
-../Src/usb_host.c: 5 warnings, 0 errors
+compiling ComponentsManager.cpp...
+..\Custom\dht22.h(19): warning:  #1300-D: Start inherits implicit virtual
+  		void Start(void);
+..\Custom\dht22.h(20): warning:  #1300-D: Check_Response inherits implicit virtual
+  		uint8_t Check_Response (void);
+..\Custom\dht22.h(21): warning:  #1300-D: Read inherits implicit virtual
+  		uint8_t Read (void);
+..\Custom\ComponentsManager.cpp: 3 warnings, 0 errors
+compiling main.c...
+..\Custom\dht22.h(19): warning:  #1300-D: Start inherits implicit virtual
+  		void Start(void);
+..\Custom\dht22.h(20): warning:  #1300-D: Check_Response inherits implicit virtual
+  		uint8_t Check_Response (void);
+..\Custom\dht22.h(21): warning:  #1300-D: Read inherits implicit virtual
+  		uint8_t Read (void);
+../Src/main.c: 3 warnings, 0 errors
 linking...
-Program Size: Code=25952 RO-data=736 RW-data=100 ZI-data=19492  
+Program Size: Code=18360 RO-data=580 RW-data=92 ZI-data=19460  
 FromELF: creating hex file...
-"usb_final\usb_final.axf" - 0 Error(s), 5 Warning(s).
+"usb_final\usb_final.axf" - 0 Error(s), 6 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -65,7 +69,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
