--- a/MDK-ARM/usb_final/usb_final.build_log.htm
+++ b/MDK-ARM/usb_final/usb_final.build_log.htm
@@ -21,12 +21,75 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.7.0
 Dialog DLL:      TCM.DLL V1.42.0.0
  
 <h2>Project:</h2>
-C:\Users\Lavicola\Documents\Programmieren von Mikrocontrollern\vorlesungsAufgaben\usb_dht_again_again\MDK-ARM\usb_final.uvprojx
-Project File Date:  07/04/2020
+C:\Users\Lavicola\Downloads\STM32f413ZH_Project-usb_dht22\STM32f413ZH_Project-usb_dht22\MDK-ARM\usb_final.uvprojx
+Project File Date:  07/05/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Build target 'usb_final'
+Rebuild target 'usb_final'
+assembling startup_stm32f413xx.s...
+compiling stm32f4xx_hal_msp.c...
+compiling usbh_platform.c...
+compiling stm32f4xx_it.c...
+compiling main.c...
+..\Custom\dht22.h(19): warning:  #1300-D: Start inherits implicit virtual
+  		void Start(void);
+..\Custom\dht22.h(20): warning:  #1300-D: Check_Response inherits implicit virtual
+  		uint8_t Check_Response (void);
+..\Custom\dht22.h(21): warning:  #1300-D: Read inherits implicit virtual
+  		uint8_t Read (void);
+..\Custom\FloatToString.h(3): warning:  #1-D: last line of file ends without a newline
+  void FloatToString( char *buf, float f);
+../Src/main.c: 4 warnings, 0 errors
+compiling fatfs.c...
+compiling usbh_diskio.c...
+compiling usb_host.c...
+../Src/usb_host.c(98): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "const TCHAR *"
+  		switch(f_stat(name,&fno)){
+../Src/usb_host.c(101): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "const TCHAR *"
+  				l_result = f_open(&MyFile,name,FA_CREATE_NEW|FA_WRITE);
+../Src/usb_host.c(104): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "const TCHAR *"
+  				l_result = f_open(&MyFile,name,FA_OPEN_APPEND|FA_WRITE);
+../Src/usb_host.c(122): warning:  #167-D: argument of type "char *" is incompatible with parameter of type "uint8_t *"
+  				HAL_UART_Transmit(&huart3, &wbytes[0], 40,1000);
+../Src/usb_host.c(84): warning:  #177-D: variable "bytesread"  was declared but never referenced
+  	UINT bytesread;
+../Src/usb_host.c(72): warning:  #177-D: variable "uart_length"  was declared but never referenced
+  static int32_t uart_length=0;
+../Src/usb_host.c: 6 warnings, 0 errors
+compiling stm32f4xx_hal_hcd.c...
+compiling usbh_conf.c...
+compiling stm32f4xx_hal_rcc.c...
+compiling stm32f4xx_ll_usb.c...
+compiling stm32f4xx_hal_flash_ramfunc.c...
+compiling stm32f4xx_hal_flash_ex.c...
+compiling stm32f4xx_hal_cortex.c...
+compiling stm32f4xx_hal_pwr.c...
+compiling stm32f4xx_hal_flash.c...
+compiling stm32f4xx_hal_pwr_ex.c...
+compiling stm32f4xx_hal_dma.c...
+compiling stm32f4xx_hal_gpio.c...
+compiling stm32f4xx_hal_dma_ex.c...
+compiling stm32f4xx_hal.c...
+compiling stm32f4xx_hal_rcc_ex.c...
+compiling system_stm32f4xx.c...
+compiling stm32f4xx_hal_exti.c...
+compiling syscall.c...
+compiling usbh_core.c...
+compiling stm32f4xx_hal_tim_ex.c...
+compiling ff_gen_drv.c...
+compiling diskio.c...
+compiling usbh_ctlreq.c...
+compiling stm32f4xx_hal_uart.c...
+compiling ff.c...
+compiling stm32f4xx_hal_tim.c...
+compiling FloatToString.cpp...
+..\Custom\FloatToString.h(3): warning:  #1-D: last line of file ends without a newline
+  void FloatToString( char *buf, float f);
+..\Custom\FloatToString.cpp(31): warning:  #550-D: variable "s"  was set but never used
+  	char *s;
+..\Custom\FloatToString.cpp: 2 warnings, 0 errors
+compiling usbh_pipes.c...
 compiling ComponentsManager.cpp...
 ..\Custom\dht22.h(19): warning:  #1300-D: Start inherits implicit virtual
   		void Start(void);
@@ -35,18 +98,28 @@ compiling ComponentsManager.cpp...
 ..\Custom\dht22.h(21): warning:  #1300-D: Read inherits implicit virtual
   		uint8_t Read (void);
 ..\Custom\ComponentsManager.cpp: 3 warnings, 0 errors
-compiling main.c...
+compiling ISensor.cpp...
+compiling usbh_ioreq.c...
+compiling dht22.cpp...
 ..\Custom\dht22.h(19): warning:  #1300-D: Start inherits implicit virtual
   		void Start(void);
 ..\Custom\dht22.h(20): warning:  #1300-D: Check_Response inherits implicit virtual
   		uint8_t Check_Response (void);
 ..\Custom\dht22.h(21): warning:  #1300-D: Read inherits implicit virtual
   		uint8_t Read (void);
-../Src/main.c: 3 warnings, 0 errors
+..\Custom\dht22.cpp(36): warning:  #68-D: integer conversion resulted in a change of sign
+  			Response = -1;
+..\Custom\dht22.cpp(90): warning:  #68-D: integer conversion resulted in a change of sign
+  	uint8_t l_Presence = -1;
+..\Custom\dht22.cpp: 5 warnings, 0 errors
+compiling usbh_msc_bot.c...
+compiling usbh_msc.c...
+compiling usbh_msc_scsi.c...
+compiling TIM_Delay.cpp...
 linking...
-Program Size: Code=18360 RO-data=580 RW-data=92 ZI-data=19460  
+Program Size: Code=26256 RO-data=744 RW-data=100 ZI-data=19492  
 FromELF: creating hex file...
-"usb_final\usb_final.axf" - 0 Error(s), 6 Warning(s).
+"usb_final\usb_final.axf" - 0 Error(s), 20 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -69,7 +142,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:23
 </pre>
 </body>
 </html>
