--- a/MDK-ARM/usb_final/usb_final.build_log.htm
+++ b/MDK-ARM/usb_final/usb_final.build_log.htm
@@ -26,23 +26,7 @@ Project File Date:  07/05/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Rebuild target 'usb_final'
-assembling startup_stm32f413xx.s...
-compiling stm32f4xx_hal_msp.c...
-compiling usbh_platform.c...
-compiling stm32f4xx_it.c...
-compiling main.c...
-..\Custom\dht22.h(19): warning:  #1300-D: Start inherits implicit virtual
-  		void Start(void);
-..\Custom\dht22.h(20): warning:  #1300-D: Check_Response inherits implicit virtual
-  		uint8_t Check_Response (void);
-..\Custom\dht22.h(21): warning:  #1300-D: Read inherits implicit virtual
-  		uint8_t Read (void);
-..\Custom\FloatToString.h(3): warning:  #1-D: last line of file ends without a newline
-  void FloatToString( char *buf, float f);
-../Src/main.c: 4 warnings, 0 errors
-compiling fatfs.c...
-compiling usbh_diskio.c...
+Build target 'usb_final'
 compiling usb_host.c...
 ../Src/usb_host.c(98): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "const TCHAR *"
   		switch(f_stat(name,&fno)){
@@ -57,69 +41,10 @@ compiling usb_host.c...
 ../Src/usb_host.c(72): warning:  #177-D: variable "uart_length"  was declared but never referenced
   static int32_t uart_length=0;
 ../Src/usb_host.c: 6 warnings, 0 errors
-compiling stm32f4xx_hal_hcd.c...
-compiling usbh_conf.c...
-compiling stm32f4xx_hal_rcc.c...
-compiling stm32f4xx_ll_usb.c...
-compiling stm32f4xx_hal_flash_ramfunc.c...
-compiling stm32f4xx_hal_flash_ex.c...
-compiling stm32f4xx_hal_cortex.c...
-compiling stm32f4xx_hal_pwr.c...
-compiling stm32f4xx_hal_flash.c...
-compiling stm32f4xx_hal_pwr_ex.c...
-compiling stm32f4xx_hal_dma.c...
-compiling stm32f4xx_hal_gpio.c...
-compiling stm32f4xx_hal_dma_ex.c...
-compiling stm32f4xx_hal.c...
-compiling stm32f4xx_hal_rcc_ex.c...
-compiling system_stm32f4xx.c...
-compiling stm32f4xx_hal_exti.c...
-compiling syscall.c...
-compiling usbh_core.c...
-compiling stm32f4xx_hal_tim_ex.c...
-compiling ff_gen_drv.c...
-compiling diskio.c...
-compiling usbh_ctlreq.c...
-compiling stm32f4xx_hal_uart.c...
-compiling ff.c...
-compiling stm32f4xx_hal_tim.c...
-compiling FloatToString.cpp...
-..\Custom\FloatToString.h(3): warning:  #1-D: last line of file ends without a newline
-  void FloatToString( char *buf, float f);
-..\Custom\FloatToString.cpp(31): warning:  #550-D: variable "s"  was set but never used
-  	char *s;
-..\Custom\FloatToString.cpp: 2 warnings, 0 errors
-compiling usbh_pipes.c...
-compiling ComponentsManager.cpp...
-..\Custom\dht22.h(19): warning:  #1300-D: Start inherits implicit virtual
-  		void Start(void);
-..\Custom\dht22.h(20): warning:  #1300-D: Check_Response inherits implicit virtual
-  		uint8_t Check_Response (void);
-..\Custom\dht22.h(21): warning:  #1300-D: Read inherits implicit virtual
-  		uint8_t Read (void);
-..\Custom\ComponentsManager.cpp: 3 warnings, 0 errors
-compiling ISensor.cpp...
-compiling usbh_ioreq.c...
-compiling dht22.cpp...
-..\Custom\dht22.h(19): warning:  #1300-D: Start inherits implicit virtual
-  		void Start(void);
-..\Custom\dht22.h(20): warning:  #1300-D: Check_Response inherits implicit virtual
-  		uint8_t Check_Response (void);
-..\Custom\dht22.h(21): warning:  #1300-D: Read inherits implicit virtual
-  		uint8_t Read (void);
-..\Custom\dht22.cpp(36): warning:  #68-D: integer conversion resulted in a change of sign
-  			Response = -1;
-..\Custom\dht22.cpp(90): warning:  #68-D: integer conversion resulted in a change of sign
-  	uint8_t l_Presence = -1;
-..\Custom\dht22.cpp: 5 warnings, 0 errors
-compiling usbh_msc_bot.c...
-compiling usbh_msc.c...
-compiling usbh_msc_scsi.c...
-compiling TIM_Delay.cpp...
 linking...
-Program Size: Code=26256 RO-data=744 RW-data=100 ZI-data=19492  
+Program Size: Code=26228 RO-data=768 RW-data=100 ZI-data=19492  
 FromELF: creating hex file...
-"usb_final\usb_final.axf" - 0 Error(s), 20 Warning(s).
+"usb_final\usb_final.axf" - 0 Error(s), 6 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -142,7 +67,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
-Build Time Elapsed:  00:00:23
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
