--- a/MDK-ARM/usb_final/usb_final.build_log.htm
+++ b/MDK-ARM/usb_final/usb_final.build_log.htm
@@ -27,22 +27,28 @@ Project File Date:  07/06/2020
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'usb_final'
-compiling main.c...
-..\Custom\FloatToString.h(3): warning:  #1-D: last line of file ends without a newline
-  void FloatToString( char *buf, float f);
-..\Custom\I2c_lcd.h(13): warning:  #1-D: last line of file ends without a newline
-  void lcd_clear (void);  
-..\Custom\dht22.h(19): warning:  #1300-D: Start inherits implicit virtual
-  		void Start(void);
-..\Custom\dht22.h(20): warning:  #1300-D: Check_Response inherits implicit virtual
-  		uint8_t Check_Response (void);
-..\Custom\dht22.h(21): warning:  #1300-D: Read inherits implicit virtual
-  		uint8_t Read (void);
-../Src/main.c: 5 warnings, 0 errors
+compiling usb_host.c...
+..\Custom\MeasureInformationObject.h(10): warning:  #1-D: last line of file ends without a newline
+   
+../Src/usb_host.c(103): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "char *restrict"
+  		sprintf(file_name,"%d-%d-%d.txt",l_MeasureObject.date[0],l_MeasureObject.date[1],l_MeasureObject.date[2]);
+../Src/usb_host.c(105): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "const TCHAR *"
+  		switch(f_stat(file_name,&fno)){
+../Src/usb_host.c(108): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "const TCHAR *"
+  				l_result = f_open(&MyFile,file_name,FA_CREATE_NEW|FA_WRITE);
+../Src/usb_host.c(111): warning:  #167-D: argument of type "uint8_t *" is incompatible with parameter of type "const TCHAR *"
+  				l_result = f_open(&MyFile,file_name,FA_OPEN_APPEND|FA_WRITE);
+../Src/usb_host.c(128): warning:  #167-D: argument of type "char *" is incompatible with parameter of type "uint8_t *"
+  				HAL_UART_Transmit(&huart3, &wbytes[0], 50,1000);
+../Src/usb_host.c(80): warning:  #177-D: variable "bytesread"  was declared but never referenced
+  	UINT bytesread;
+../Src/usb_host.c(71): warning:  #177-D: variable "uart_length"  was declared but never referenced
+  static int32_t uart_length=0;
+../Src/usb_host.c: 8 warnings, 0 errors
 linking...
-Program Size: Code=28084 RO-data=740 RW-data=100 ZI-data=19604  
+Program Size: Code=30504 RO-data=716 RW-data=76 ZI-data=19604  
 FromELF: creating hex file...
-"usb_final\usb_final.axf" - 0 Error(s), 5 Warning(s).
+"usb_final\usb_final.axf" - 0 Error(s), 8 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -65,7 +71,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
