--- a/MDK-ARM/usb_final/usb_final.build_log.htm
+++ b/MDK-ARM/usb_final/usb_final.build_log.htm
@@ -22,12 +22,47 @@ Dialog DLL:      TCM.DLL V1.42.0.0
  
 <h2>Project:</h2>
 C:\Users\Lavicola\Documents\Programmieren von Mikrocontrollern\vorlesungsAufgaben\HIER\STM32f413ZH_Project-usb_dht22\MDK-ARM\usb_final.uvprojx
-Project File Date:  07/07/2020
+Project File Date:  07/24/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'usb_final'
-"usb_final\usb_final.axf" - 0 Error(s), 0 Warning(s).
+compiling main.c...
+..\Custom\MeasureInformationObject.h(10): warning:  #1-D: last line of file ends without a newline
+   
+..\Custom\FloatToString.h(3): warning:  #1-D: last line of file ends without a newline
+  void FloatToString( char *buf, float f);
+..\Custom\I2c_lcd.h(13): warning:  #1-D: last line of file ends without a newline
+  void lcd_clear (void);  
+..\Custom\Ds18b20.h(28): warning:  #1300-D: Start inherits implicit virtual
+  		void Start (void);
+..\Custom\Ds18b20.h(29): warning:  #1300-D: Check_Response inherits implicit virtual
+  		bool Check_Response(void); 
+..\Custom\Ds18b20.h(31): warning:  #1300-D: Read inherits implicit virtual
+  		uint8_t Read (void);
+..\Custom\dht22.h(25): warning:  #1300-D: Start inherits implicit virtual
+  		void Start(void);
+..\Custom\dht22.h(26): warning:  #1300-D: Check_Response inherits implicit virtual
+  		bool Check_Response (void);
+..\Custom\dht22.h(27): warning:  #1300-D: Read inherits implicit virtual
+  		uint8_t Read (void);
+..\Custom\dht22.h(39): warning:  #1-D: last line of file ends without a newline
+  #endif
+..\Custom\ComponentsManager.h(57): warning:  #1-D: last line of file ends without a newline
+  #endif
+../Src/main.c(518): warning:  #177-D: variable "l_Measurement"  was declared but never referenced
+  	dht22MeasureObject l_Measurement;
+../Src/main.c(519): warning:  #177-D: variable "l_MeasureObject"  was declared but never referenced
+  	MeasureInformation l_MeasureObject;
+../Src/main.c(537): warning:  #177-D: function "GetRTCDate"  was declared but never referenced
+  static void GetRTCDate(uint8_t *date){
+../Src/main.c(550): warning:  #177-D: function "GetRTCTime"  was declared but never referenced
+  static void GetRTCTime(uint8_t *time){
+../Src/main.c: 15 warnings, 0 errors
+linking...
+Program Size: Code=21728 RO-data=608 RW-data=68 ZI-data=19636  
+FromELF: creating hex file...
+"usb_final\usb_final.axf" - 0 Error(s), 15 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -50,7 +85,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
